--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "firebase": "^5.8.0",
     "vee-validate": "^2.1.3",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
