--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "firebase": "^5.8.0",
+    "moment": "^2.24.0",
     "vee-validate": "^2.1.3",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
+    "vuefire": "^1.4.5",
     "vuelidate": "^0.7.4",
     "vuex": "^3.0.1"
   },
