--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.24.0",
     "vee-validate": "^2.1.3",
     "vue": "^2.5.17",
+    "vue-chat-scroll": "^1.3.5",
     "vue-router": "^3.0.1",
     "vuefire": "^1.4.5",
     "vuelidate": "^0.7.4",
