--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
     "firebase": "^5.8.0",
     "moment": "^2.24.0",
     "vee-validate": "^2.1.3",
-    "vue": "^2.5.17",
+    "vue": "^2.5.22",
     "vue-chat-scroll": "^1.3.5",
-    "vue-router": "^3.0.1",
+    "vue-router": "^3.0.2",
     "vuefire": "^1.4.5",
     "vuelidate": "^0.7.4",
-    "vuex": "^3.0.1"
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.1.1",
-    "@vue/cli-plugin-eslint": "^3.1.5",
-    "@vue/cli-service": "^3.1.4",
+    "@vue/cli-plugin-babel": "^3.3.0",
+    "@vue/cli-plugin-eslint": "^3.3.0",
+    "@vue/cli-service": "^3.3.1",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0-0",
-    "vue-template-compiler": "^2.5.17"
+    "eslint": "^5.12.1",
+    "eslint-plugin-vue": "^5.1.0",
+    "vue-template-compiler": "^2.5.22"
   },
   "eslintConfig": {
     "root": true,
